@@ -1780,3 +1780,11 @@ Removed all files in intl/ since they should now be autogenerated by
 whatever version of gettext is installed, and different versions have
 different files.  Plus they're autogenerated anyway, so they shouldn't
 be in CVS to begin with.
+
+-------------------------------------------------------------------------------
+
+Wed Apr  2 17:54:45 EST 2003
+(KainX)
+
+Added latest patch from Kim Woelders <kim@woelders.dk> to fix setting
+of the _NET_DESKTOP_VIEWPORT hint.
